Fix forms rendering on iOS.

--- a/src/main/java/com/googlecode/mgwt/ui/client/widget/form/form.css
+++ b/src/main/java/com/googlecode/mgwt/ui/client/widget/form/form.css
@@ -95,6 +95,7 @@
   display: flex;
   flex: 1;
   justify-content: flex-end;
+  width: 70%;
 }
 
 .mgwt-Form-Entry-invalid{}
